# Tazmania

./: README.md
tazmania/: package.json
tazmania/circuits/: merkle.circom  withdraw.circom
tazmania/contract/: Cargo.toml  deploy.sh
tazmania/contract/src/: lib.rs  merkle.rs  tazmania.rs  utils.rs  verifier.rs
tazmania/frontend/: App.js  hashers.js  index.html  index.js  merkle.js  near-interface.js  package.json  proof.js  relayer.js  test.js  ui-components.js  utils.js
tazmania/frontend/assets/: circuit.wasm  global.css
tazmania/integration-tests/src/: tests.rs
tazmania/relayer/: config.json  explorer.js  network.py  package.json  proof.js  requirements.txt  router.js  schemas.py  server.js  server.py
tazmania/scripts/: build_circuit.sh
